snapshots/syntax/library/statements/savesetting/savesetting_boolean_value.snap
---
source: src/syntax/library/statements/savesetting.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SaveSettingStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SaveSettingKeyword
                  text: SaveSetting
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"MyApp\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"Options\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"Visible\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: MeKeyword
                  text: Me
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: Visible
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
